# zodchy-bootstrap

./: .env.jinja  .gitignore  Makefile.jinja  cli.py.jinja  copier.yml  pyproject.toml  settings.py.jinja  {% if need_docker %}Dockerfile{% endif %}  {% if need_docker %}docker-compose.yml{% endif %}.jinja  {%if need_docker %}.env.docker{% endif %}.jinja
actors/: bootstrap.py.jinja
actors/{% if need_acme %}acme{% endif %}/: audit.py  context.py  domain.py  external.py
actors/{% if need_acme %}acme{% endif %}/storage/: read.py  write.py
actors/{% if need_acme %}items{% endif %}/: __init__.py  audit.py  context.py  domain.py  external.py
actors/{% if need_acme %}items{% endif %}/storage/: __init__.py  read.py  write.py
actors/{% if need_events %}system{%endif%}/: events.py.jinja
internals/: __init__.py
internals/scripts/: auth.py
ports/: __init__.py
ports/api/: __init__.py  instance.py  instance.py.jinja  launch.py
ports/api/v1/: bootstrap.py  bootstrap.py.jinja
ports/api/v1/contracts/: __init__.py  application.py  application.py.jinja  payload.py
ports/api/v1/contracts/schema/: __init__.py.jinja
ports/api/v1/contracts/schema/{%if need_acme %}acme{% endif %}/: __init__.py  requests.py  responses.py
ports/api/v1/contracts/schema/{%if need_acme %}items{% endif %}/: __init__.py  requests.py  responses.py
ports/api/v1/endpoints/: generic.py  {% if need_acme %}acme.py{% endif %}  {% if need_acme %}items.py{% endif %}
ports/api/v1/middleware/: __init__.py  http.py
ports/api/v1/routes/: __init__.py.jinja  {% if need_acme %}acme.py{% endif %}  {% if need_acme %}items.py{% endif %}
ports/rdbs/: __init__.py  bootstrap.py  schema.py.jinja  seed.py
provision/: __init__.py  adapters.py  cqrs.py  dependency.py  dependency.py.jinja
specs/: __init__.py  identity.py  patterns.py  security.py  services.py  types.py  types.py.jinja
specs/configs/: __init__.py
specs/configs/security/: __init__.py  encryption.py
specs/configs/storage/: rdbs.py
specs/connections/: __init__.py  rdbs.py
specs/context/: __init__.py.jinja  request.py  {% if need_acme %}acme.py{% endif %}  {% if need_acme %}items.py{% endif %}
specs/contracts/: __init__.py  service.py  storage.py
specs/mappings/: rdbs.py.jinja
specs/messages/: __init__.py.jinja  {% if need_acme %}acme.py{% endif %}  {% if need_acme %}items.py{% endif %}
specs/schemas/storage/: __init__.py  buckets.py.jinja  mappings.py.jinja
