[tool.poetry]
name = "place_your_name_here"
version = "0.1.1"
description = ""
authors = ["Feofilaktov, Sergey <man@smairon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.20"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
fire = "^0.6.0"
envparse = "^0.2.0"
fastapi = "^0.110.2"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
faker = "^24.14.1"
uvicorn = "^0.29.0"
pydantic-extra-types = "^2.0.0"
pyjwt = "^2.8.0"
orjson = "^3.9.7"
httpx = "^0.27.0"
sqlalchemy-schema-factory = "^0.1.4"
pancho = "^1.0.0"
alembic-tools = "^0.1.4"
streamlord = "^0.2.1"
zorge = "^1.1.1"
hermitage = "^0.3.2"
hermitage-alchemy = "^0.3.3"
zodchy = "^0.3.0"
zodchy-security = "^0.1.2"
zodchy-patterns = "^0.3.1"
zodchy-fastapi = "^0.3.3"
zodchy-identity = "^0.1.1"
zodchy-notations = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
